2008-09-09	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bsp_howto/Developer-User-Timeline.png: Correct figure.

2008-09-09	Ralf Corsépius <ralf.corsepius@rtems.org>

	* user/chains.t, user/conf.t, user/object.t, user/userext.t:
	More "bool" cleanup.
	* bsp_howto/ata.t, bsp_howto/rtc.t, networking/networkapp.t,
	user/chains.t, user/stackchk.t: Convert to "bool".

2008-09-09	Ralf Corsépius <ralf.corsepius@rtems.org>

	* user/datatypes.t: Add deprecation notices to 
	"rtems_boolean", "rtems_single", "rtems_double".
	* user/intr.t, user/userext.t: Convert to "bool".

2008-09-08	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bsp_howto/timer.t: Update documentation to reflect Timer Driver
	renaming.

2008-09-05	Joel Sherrill <joel.sherrill@OARcorp.com>

	* bsp_howto/clock.t: The Shared Memory Driver no longer requires the
	special IOCTL in Clock_control. This was a hack which has existed
	since before the Classic API Timer Manager was implemented. All
	implementations of and references to Clock_control were removed.

2008-09-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* user/conf.t: Add CONFIGURE_BSP_PREREQUISITE_DRIVERS and
	CONFIGURE_APPLICATION_PREREQUISITE_DRIVERS.

2008-08-27	Joel Sherrill <joel.sherrill@oarcorp.com>

	* user/object.t: Correct order of arguments.

2008-08-24	Joel Sherrill <joel.sherrill@OARcorp.com>

	* user/clock.t: Correct discussion of timeval.

2008-08-22	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bsp_howto/init.t: Eliminate empty section.

2008-08-22	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bsp_howto/init.t: Complete update.

2008-08-22	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bsp_howto/Makefile.am, bsp_howto/init.t, bsp_howto/intro.t,
	bsp_howto/makefiles.t, bsp_howto/support.t: Update initialization
	sequence. Add another figure.
	* bsp_howto/BSPInitFlowchart-49.eps, bsp_howto/BSPInitFlowchart-49.png: New files.

2008-08-21	Joel Sherrill <joel.sherrill@oarcorp.com>

	* index.html.in: Reorder manuals.
