@@ -1,3 +1,9 @@
+2008-09-17	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* user/conf.t: Add support for optionally having a unified work area.
+	In other words, the RTEMS Workspace and C Program Heap are the same
+	pool of memory.
+
 2008-09-09	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* bsp_howto/Developer-User-Timeline.png: Correct figure.
